# ros_training

./: README.md
training_noetic_ws/src/hmi_controls/: package.xml
training_noetic_ws/src/hmi_controls/config/hmi_interface/: hmi_buttons.html
training_noetic_ws/src/hmi_controls/scripts/: get_package_path.py  hmi_restart.sh  start_server.sh
training_noetic_ws/src/pilz_robots/pilz_common/: README.md
training_noetic_ws/src/pilz_robots/pilz_common/pilz_industrial_motion_testutils/: CHANGELOG.rst  CMakeLists.txt  package.xml
training_noetic_ws/src/pilz_robots/pilz_common/pilz_industrial_motion_testutils/src/pilz_industrial_motion_testutils/: acceptance_test_utils.py  integration_test_utils.py
training_noetic_ws/src/pilz_robots/pilz_common/pilz_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
training_noetic_ws/src/pilz_robots/pilz_common/pilz_testutils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
training_noetic_ws/src/pilz_robots/pilz_common/pilz_testutils/include/pilz_testutils/: async_test.h  joint_state_publisher_mock.h  logger_mock.h  mock_appender.h  service_client_mock.h
training_noetic_ws/src/pilz_robots/pilz_common/pilz_testutils/src/: joint_state_publisher_mock.cpp
training_noetic_ws/src/pilz_robots/pilz_common/pilz_testutils/test/: unittest_async_test.cpp  unittest_joint_state_publisher_mock.cpp  unittest_joint_state_publisher_mock.test  unittest_logger_mock.cpp  unittest_service_client_mock.cpp
training_noetic_ws/src/pilz_robots/pilz_common/pilz_utils/: CMakeLists.txt  package.xml
training_noetic_ws/src/pilz_tutorial/config/: moveit.rviz  moveit_pickplace.rviz  moveit_tfs.rviz  pilz_ros_tutorial.code-snippets  robotvisualization.rviz  ubuntu-terminal.json
training_noetic_ws/src/pilz_tutorial/launch/: bringup_full_application.launch  my_application.launch
training_noetic_ws/src/pilz_tutorial/scripts/: myFirstApplication.py  myMoveitapplication.py  mySecondApplication.py
training_noetic_ws/src/pilz_tutorial/urdf/: my_first_application.xacro
training_noetic_ws/src/pilz_tutorial/urdf/meshes/: cube_meters.stl
training_ws/src/aruco_ros/aruco_ros/launch/: mysingle.launch
training_ws/src/easy_handeye/easy_handeye/config/: pilz_robot.yaml
training_ws/src/easy_handeye/easy_handeye/launch/: rviz_easy_handeye.config
training_ws/src/hmi_controls/: CMakeLists.txt
training_ws/src/hmi_controls/launch/: launch_hmi.launch
training_ws/src/hmi_controls/scripts/: get_package_path.py  hmi_start.sh  start_firefox.sh  start_server.sh  troubleshoot.sh
training_ws/src/my_application/: CMakeLists.txt  package.xml
training_ws/src/my_application/launch/: bringup_full_application.launch  my_application.launch  my_application_perception.launch
training_ws/src/my_application/scripts/: myFirstApplication.py  my_application_perception.py
training_ws/src/my_application/urdf/: my_first_application.xacro
training_ws/src/my_application/urdf/meshes/: CubeRamp.STL  cell.stl
training_ws/src/my_calibration/: CMakeLists.txt  package.xml
training_ws/src/my_calibration/launch/: camera_pose.launch  my_calibration.launch
training_ws/src/my_perception/: CMakeLists.txt  package.xml
training_ws/src/my_perception/launch/: my_perception.launch
training_ws/src/my_perception/src/: perception_node.cpp  perception_node_bkp.cpp
training_ws/src/my_perception/srv/: partUpdate.srv
training_ws/src/pilz_robots/prbt_moveit_config/launch/: calibration.rviz  moveit_planning_execution.launch
ur_training/: .Commands.un~  Commands  Commands~
ur_training/src/my_application_cpp/: CMakeLists.txt  StepByStep.txt  package.xml
ur_training/src/my_application_cpp/src/: my_application_cpp.cpp
ur_training/src/ur5_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ur5.srdf
ur_training/src/ur5_moveit_config/launch/: move_group.launch  moveit.rviz
ur_training/src/ur_pilz_tutorial/: CMakeLists.txt  package.xml
ur_training/src/ur_pilz_tutorial/launch/: ur_my_application.launch
ur_training/src/ur_pilz_tutorial/scripts/: ur5_robot.py  ur_myFirstApplication.py
ur_training/src/ur_pilz_tutorial/urdf/: pg70.urdf.xacro  ur_my_first_application.xacro
